# rsbbs

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  rsbbs.py  sample_transcript.txt  setup.py
.gitea/workflows/: build.yaml  test.yaml
rsbbs/: __init__.py  args.py  bbs.py  commands.py  config.py  config.yaml.sample  config_default.yaml  console.py  controller.py  logger.py  logging.py  message.py  models.py  parser.py  pluginloader.py  project_root.py  rsbbs.py  ui.py  user.py
rsbbs/plugins/bye/: plugin.py
rsbbs/plugins/delete/: plugin.py
rsbbs/plugins/deletem/: plugin.py
rsbbs/plugins/heard/: plugin.py
rsbbs/plugins/help/: plugin.py
rsbbs/plugins/info/: info_default.txt  plugin.py
rsbbs/plugins/list/: plugin.py
rsbbs/plugins/listm/: plugin.py
rsbbs/plugins/listmine/: plugin.py
rsbbs/plugins/listnew/: plugin.py
rsbbs/plugins/listunread/: plugin.py
rsbbs/plugins/read/: plugin.py
rsbbs/plugins/readm/: plugin.py
rsbbs/plugins/readnew/: plugin.py
rsbbs/plugins/send/: plugin.py
rsbbs/plugins/sendp/: plugin.py
rsbbs/plugins/stats/: plugin.py
tests/: __init__.py  test_parse_args.py
