[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rsbbs"
dynamic = ["version"]
authors = [
  { name="John Burwell", email="john@atatdotdot.com" },
]
description = "A BBS for ax25d and packet radio that is really simple"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "platformdirs",
  "PyYAML",
  "SQLAlchemy",
]

[project.scripts]
rsbbs = "rsbbs.rsbbs:main"

[project.urls]
repository = "https://git.b-wells.us/jmbwell/rsbbs"

[tool.setuptools.package-data]
rsbbs = ["config_default.yaml"]

[tool.setuptools.dynamic]
version = {attr = "rsbbs.__version__"}